--- a/.github/workflows/dev_testingdev1.yml
+++ b/.github/workflows/dev_testingdev1.yml
@@ -26,7 +26,7 @@ jobs:
                 DEFAULT_BRANCH: "master"
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 VALIDATE_YAML: false
-                VALIDATE_GITLEAKS: true
+                VALIDATE_GITLEAKS: false
   build:
     runs-on: windows-latest
     needs: run-lint
